# stdnet

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  TODO.md  hello.html  main.cpp  overview.cpp
data/: hello.html
examples/: accu-2024.cpp  accu-client-2024.cpp  client.cpp  http-server-template.cpp  overview.cpp  server.cpp  simple-http-server.cpp
include/: Makefile
include/stdnet/: basic_socket.hpp  basic_stream_socket.hpp  buffer.hpp  connection.hpp  container.hpp  context_base.hpp  cpo.hpp  endpoint.hpp  event_context.hpp  internet.hpp  io_base.hpp  io_context.hpp  io_context_scheduler.hpp  libevent_context.hpp  listener.hpp  netfwd.hpp  openssl_context.hpp  poll_context.hpp  preconnection.hpp  preferences.hpp  properties.hpp  properties_def.hpp  ring_buffer.hpp  socket.hpp  socket_base.hpp  timer.hpp
scripts/: mkprops.pl
ssl/: Makefile
test/: CMakeLists.txt  Makefile
test/net/: test_intrusive_list.cpp
test/stdnet/: buffer.cpp  test_container.cpp  test_context_base.cpp  test_poll_context.cpp
tmp/: Makefile  main.cpp  taps_preconnection.hpp
